Finished 2 path which are /behavior and /record but still working on path /time that need to insert many in the database
